[package]
name = "mastermind-wasm"
version = "0.1.0"
authors = ["Willem Verstraeten <willem.verstraeten@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
mastermind = { path = "../lib" }
wasm-bindgen = "0.2"
js-sys= "*"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = "0.4.5"



[dependencies.web-sys]
version = "*"
features = [
  'AddEventListenerOptions',
  'Blob',
  'console',
  'Document',
  'DomStringMap',
  'DomTokenList',
  'Element',
  'EventTarget',
  'FileReader',
  'HtmlElement',
  'HtmlButtonElement',
  'HtmlInputElement',
  'KeyboardEvent',
  'Location',
  'MessageEvent',
  'Node',
  'NodeList',
  'Performance',
  'PointerEvent',
  'ProgressEvent',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
